--- a/MainPage.html
+++ b/MainPage.html
@@ -12,12 +12,13 @@
       </nav>
 
 <h1>C# Course @ realdolmen</h1>
-<p></p>
-<p></p>
+<p>Deze website gaat over onze opleiding bij Realdolmen</p>
+<p>Sinds Februarie volgen we daar een opleiding c# developper</p>
 
 <footer>
     <P>Copyright @Realdolmen</P>
-    <P></P>
+    <P>Joris Verhelst</P>
+    <p>2020</p>
 </footer>
 </body>
 </html>
