--- a/MainPage.html
+++ b/MainPage.html
@@ -17,7 +17,7 @@
 
 <footer>
     <P>Copyright @Realdolmen</P>
-    <P>Joris Verhelst</P>
+    <P>Auteur: Joris&nbps;Verhelst</P>
     <p>2020</p>
 </footer>
 </body>
