--- a/MainPage.html
+++ b/MainPage.html
@@ -13,11 +13,25 @@
 
 <h1>C# Course @ realdolmen</h1>
 <p>Deze website gaat over onze opleiding bij Realdolmen</p>
-<p>Sinds Februarie volgen we daar een opleiding c# developper</p>
+<p>Sinds Februarie volgen we daar een opleiding c# developper met volgende onderwerpen:</p>
+<dl>
+    <dl> Datatypes:</dl>
+    <dd> Finished</dd>
+    <dl> Variabelen:</dl>
+    <dd> Finished</dd>
+    <dl> Methoden:</dl>
+    <dd> Finished</dd>
+    <dl> Klasses:</dl>
+    <dd> Finished</dd>
+    <dl> Lijsten:</dl>
+    <dd> Finished</dd>
+    <dl> Loops:</dl>
+    <dd> Finished</dd>
+</dl>
 
 <footer>
     <P>Copyright @Realdolmen</P>
-    <P>Auteur: Joris&nbps;Verhelst</P>
+    <P>Auteur: Joris Verhelst</P>
     <p>2020</p>
 </footer>
 </body>
