--- a/MainPage.html
+++ b/MainPage.html
@@ -1,38 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Home</title>
-</head>
-<body>
-    <nav>
-        <a href="/html/">HTML</a> |
-        <a href="/css/">CSS</a> |
-        <a href="/js/">JavaScript</a> |
-        <a href="/jquery/">jQuery</a>
-      </nav>
+    <head>
+    <title>Home</title>
+    </head>
+    <body>
+        <nav>
+            <a href="/html/">HTML</a> |
+            <a href="/css/">CSS</a> |
+            <a href="/js/">JavaScript</a> |
+            <a href="/jquery/">jQuery</a>
+        </nav>
 
-<h1>C# Course @ realdolmen</h1>
-<p>Deze website gaat over onze opleiding bij Realdolmen</p>
-<p>Sinds Februarie volgen we daar een opleiding c# developper met volgende onderwerpen:</p>
-<dl>
-    <dl> Datatypes:</dl>
-    <dd> Finished</dd>
-    <dl> Variabelen:</dl>
-    <dd> Finished</dd>
-    <dl> Methoden:</dl>
-    <dd> Finished</dd>
-    <dl> Klasses:</dl>
-    <dd> Finished</dd>
-    <dl> Lijsten:</dl>
-    <dd> Finished</dd>
-    <dl> Loops:</dl>
-    <dd> Finished</dd>
-</dl>
+    <h1>C# Course @ realdolmen</h1>
+    <p>Deze website gaat over onze opleiding bij Realdolmen</p>
+    <p>Sinds Februarie volgen we daar een opleiding c# developper met volgende onderwerpen:</p>
+    <dl>
+        <dl> Datatypes:  <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"> <a href="#Datatypes">Datatypes info</a></dl>
+        <dd> Finished</dd>
+        <dl> Variabelen: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Variabelen">Variabelen info</a></dl>
+        <dd> Finished</dd>
+        <dl> Methoden: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Methoden">Methoden info</a></dl>
+        <dd> Finished</dd>
+        <dl> Klasses: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Klasses">Klasses info</a></dl>
+        <dd> Finished</dd>
+        <dl> Lijsten: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Lijsten">Lijsten info</a></dl>
+        <dd> Finished</dd>
+        <dl> Loops: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Loops"></a>Loops info</dl>
+        <dd> Finished</dd>
+        <dl> Winforms: <img src="D:\School\Cevora\Pictures\WinForms.gif" alt="Smiley face" height="42" width="42"><a href="#Winforms">Winforms info</a></dl>
+        <dd> Finished</dd>
+        <dl> HTML & CSS: <img src="D:\School\Cevora\Pictures\HTMLLogo.png" alt="Smiley face" height="42" width="42"><a href="#HTML & CSS">HTML & CSS info</a></dl>
+        <dd> In progress</dd>
+        <dl> UWP: <img src="D:\School\Cevora\Pictures\UWPLogo.png" alt="Smiley face" height="42" width="42"><a href="#UWP">UWP info</a></dl>
+        <dd> Cancelled</dd>
+        <dl> JavaScript: <img src="D:\School\Cevora\Pictures\JavaScript-logo.png" alt="Smiley face" height="42" width="42"><a href="#JavaScript">JavaScript info</a></dl>
+        <dd> Not yet started</dd>
+    </dl>
 
-<footer>
-    <P>Copyright @Realdolmen</P>
-    <P>Auteur: Joris Verhelst</P>
-    <p>2020</p>
-</footer>
+    <P id="Datatypes"  title="Datatypes">
+        Hier zagen we welke datatypes er bestaan in C#.
+        Datatypes zijn niet compatibel met andere datatypes tenzij we een conversion methode gebruiken.
+    </P>
+    <P id="Variabelen"  title="Variabelen">
+        Variabelen zijn entiteiten waarin we waardes en andere zaken kunnen opslaan terwijl het programma bezig is.
+    </P>
+    <P id="Methoden"  title="Methoden">
+
+    </P>
+    <P id="Klasses"  title="Klasses">
+
+    </P>
+    <P id="Lijsten"  title="Lijsten">
+
+    </P>
+    <P id="Loops"  title="Loops">
+
+    </P>
+    <P id="Winforms"  title="Winforms">
+
+    </P>
+    <P id="HTML & CSS"  title="HTML & CSS">
+
+    </P>
+    <P id="UWP"  title="UWP">
+
+    </P>
+    <P id="JavaScript"  title="JavaScript">
+
+    </P>
+
+    <footer>
+        <P>Copyright @Realdolmen</P>
+        <P>Auteur: Joris Verhelst</P>
+        <p>2020</p>
+    </footer>
 </body>
 </html>
