--- a/AutoMerken.html
+++ b/AutoMerken.html
@@ -6,24 +6,15 @@
     <body>
         <table>
             <tr>
-                <th colspan="2">ID's </th>
+                <th rowspan="2">ID's </th>
+                <th colspan="4">Merken </th>
             </tr>
             <tr>
-                <th rowspan="4">merken </th>
+                <th>Audi </th>
+                <th>Peugot </th>
+                <th>Honda </th>
+                <th>Geit </th>
             </tr>
-            <tr>
-                <th colspan="2">merken </th>
-            </tr>
-            <tr>
-                <th colspan="2">merken </th>
-            </tr>
-            <tr>
-                <th colspan="2">merken </th>
-            </tr>
-            <tr>
-                <th colspan="2">merken </th>
-            </tr>
-
         </table>
     </body>
 </html>
