--- a/MainPage.html
+++ b/MainPage.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="MainpageStyle.css">
     <title>Home</title>
     </head>
     <body>
         <nav>
-            <a href="/html/">HTML</a> |
-            <a href="/css/">CSS</a> |
-            <a href="/js/">JavaScript</a> |
-            <a href="/jquery/">jQuery</a>
+            <a href="MainPage.html">Home</a> |
+            <a href="Contact.html">Contact</a> |
         </nav>
 
     <h1>C# Course @ realdolmen</h1>
     <p>Deze website gaat over onze opleiding bij Realdolmen</p>
     <p>Sinds Februarie volgen we daar een opleiding c# developper met volgende onderwerpen:</p>
     <dl>
-        <dl> Datatypes:  <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"> <a href="#Datatypes">Datatypes info</a></dl>
+        <dt class="C"> Datatypes:  <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"> <a href="#Datatypes">Datatypes info</a></dt>
         <dd> Finished</dd>
-        <dl> Variabelen: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Variabelen">Variabelen info</a></dl>
+        <dt class="C"> Variabelen: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Variabelen">Variabelen info</a></dt>
         <dd> Finished</dd>
-        <dl> Methoden: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Methoden">Methoden info</a></dl>
+        <dt class="C"> Methoden: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Methoden">Methoden info</a></dt>
         <dd> Finished</dd>
-        <dl> Klasses: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Klasses">Klasses info</a></dl>
+        <dt class="C"> Klasses: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Klasses">Klasses info</a></dt>
         <dd> Finished</dd>
-        <dl> Lijsten: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Lijsten">Lijsten info</a></dl>
+        <dt class="C"> Lijsten: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Lijsten">Lijsten info</a></dt>
         <dd> Finished</dd>
-        <dl> Loops: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Loops"></a>Loops info</dl>
+        <dt class="C"> Loops: <img src="D:\School\Cevora\Pictures\Smiley.png" alt="Smiley face" height="42" width="42"><a href="#Loops"></a>Loops info</dt>
         <dd> Finished</dd>
-        <dl> Winforms: <img src="D:\School\Cevora\Pictures\WinForms.gif" alt="Smiley face" height="42" width="42"><a href="#Winforms">Winforms info</a></dl>
+        <dt class="C"> Winforms: <img src="D:\School\Cevora\Pictures\WinForms.gif" alt="Smiley face" height="42" width="42"><a href="#Winforms">Winforms info</a></dt>
         <dd> Finished</dd>
-        <dl> HTML & CSS: <img src="D:\School\Cevora\Pictures\HTMLLogo.png" alt="Smiley face" height="42" width="42"><a href="#HTML & CSS">HTML & CSS info</a></dl>
+        <dt> HTML & CSS: <img src="D:\School\Cevora\Pictures\HTMLLogo.png" alt="Smiley face" height="42" width="42"><a href="#HTML & CSS">HTML & CSS info</a></dt>
         <dd> In progress</dd>
-        <dl> UWP: <img src="D:\School\Cevora\Pictures\UWPLogo.png" alt="Smiley face" height="42" width="42"><a href="#UWP">UWP info</a></dl>
+        <dt class="C"> UWP: <img src="D:\School\Cevora\Pictures\UWPLogo.png" alt="Smiley face" height="42" width="42"><a href="#UWP">UWP info</a></dt>
         <dd> Cancelled</dd>
-        <dl> JavaScript: <img src="D:\School\Cevora\Pictures\JavaScript-logo.png" alt="Smiley face" height="42" width="42"><a href="#JavaScript">JavaScript info</a></dl>
+        <dt> JavaScript: <img src="D:\School\Cevora\Pictures\JavaScript-logo.png" alt="Smiley face" height="42" width="42"><a href="#JavaScript">JavaScript info</a></dt>
         <dd> Not yet started</dd>
     </dl>
 
