--- a/MainPage.html
+++ b/MainPage.html
@@ -8,6 +8,7 @@
         <nav>
             <a href="MainPage.html">Home</a> |
             <a href="Contact.html">Contact</a> |
+            <a href="Table.html">Table</a> |
         </nav>
 
     <h1>C# Course @ realdolmen</h1>
