created the table page

--- a/Table.html
+++ b/Table.html
@@ -4,16 +4,53 @@
     <title>Automerken Tabel</title>
     </head>
     <body>
+        <nav>
+            <a href="MainPage.html">Home</a> |
+            <a href="Contact.html">Contact</a> |
+            <a href="Table.html">Table</a> |
+        </nav>
         <table>
             <tr>
-                <th>Starter</th>
-                <th colspan="4">Merken </th>
+                <th></th>
+                <th> Starter $5.99</th>
+                <th> Pro 1 $7.99</th>
+                <th> Pro 2 $11.99</th>
+                <th> Reseller $19.99</th>
             </tr>
             <tr>
-                <th>Audi </th>
-                <th>Peugot </th>
-                <th>Honda </th>
-                <th>Geit </th>
+                <th>Diskspace </th>
+                <td>4 GB </td>
+                <td>6 GB</td>
+                <td>8 GB</td>
+                <td>12 GB</td>
+            </tr>
+            <tr>
+                <th>Bandwith(per month) </th>
+                <td>25 GB </td>
+                <td>50 GB</td>
+                <td>75 GB</td>
+                <td>100 GB</td>
+            </tr>
+            <tr>
+                <th>Websites </th>
+                <td>1 </td>
+                <td>1</td>
+                <td>3</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <th>MySQL Databases </th>
+                <td>5 </td>
+                <td>10</td>
+                <td>20</td>
+                <td>50</td>
+            </tr>
+            <tr>
+                <th>Domains </th>
+                <td>1</td>
+                <td>Unlimited</td>
+                <td>Unlimited</td>
+                <td>Unlimited</td>
             </tr>
         </table>
     </body>
