--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
             <label for="lname">Last name*</label>
             <input type="text" id="lname" name="lname" class="field"><br>
             <label for="email">Email adres*</label>
-            <input type="text" id="email" name="email" class="field"><br>
+            <input type="email" id="email" name="email" class="field"><br>
             <label for="pswd">Paswoord*</label>
             <input type="password" id="pswd" name="pswd" class="field"><br>
             <label for="pswd-conf">Bevestig paswoord*</label>
