tried some changes and added some style

--- a/Table.html
+++ b/Table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Automerken Tabel</title>
+        <link rel="stylesheet" href="TableStyle.css">
     </head>
     <body>
         <nav>
@@ -10,12 +10,13 @@
             <a href="Table.html">Table</a> |
         </nav>
         <table>
-            <tr>
-                <th></th>
-                <th> Starter $5.99</th>
-                <th> Pro 1 $7.99</th>
-                <th> Pro 2 $11.99</th>
-                <th> Reseller $19.99</th>
+            <br>
+            <tr class="head">
+                <td></td>
+                <th class="top"> Starter <br>$5.99</th>
+                <th class="top2"> Pro <br>1 $7.99</th>
+                <th class="top"> Pro 2 <br>$11.99</th>
+                <th class="top2"> Reseller <br>$19.99</th>
             </tr>
             <tr>
                 <th>Diskspace </th>
@@ -24,8 +25,8 @@
                 <td>8 GB</td>
                 <td>12 GB</td>
             </tr>
-            <tr>
-                <th>Bandwith(per month) </th>
+            <tr class="odd">
+                <th>Bandwith(per <br>month) </th>
                 <td>25 GB </td>
                 <td>50 GB</td>
                 <td>75 GB</td>
@@ -38,8 +39,8 @@
                 <td>3</td>
                 <td>10</td>
             </tr>
-            <tr>
-                <th>MySQL Databases </th>
+            <tr class="odd">
+                <th>MySQL <br>Databases </th>
                 <td>5 </td>
                 <td>10</td>
                 <td>20</td>
