--- a/Table.html
+++ b/Table.html
@@ -14,12 +14,12 @@
             <tr class="head">
                 <td></td>
                 <th class="top"> Starter <br>$5.99</th>
-                <th class="top2"> Pro <br>1 $7.99</th>
+                <th class="top2"> Pro 1 <br>$7.99</th>
                 <th class="top"> Pro 2 <br>$11.99</th>
                 <th class="top2"> Reseller <br>$19.99</th>
             </tr>
             <tr>
-                <th>Diskspace </th>
+                <th>Diskspace  </th>
                 <td>4 GB </td>
                 <td>6 GB</td>
                 <td>8 GB</td>
@@ -49,9 +49,9 @@
             <tr>
                 <th>Domains </th>
                 <td>1</td>
-                <td>Unlimited</td>
-                <td>Unlimited</td>
-                <td>Unlimited</td>
+                <td>unlimited</td>
+                <td>unlimited</td>
+                <td>unlimited</td>
             </tr>
         </table>
     </body>
